--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ address {
 }
 
 pre {
-	background: #A81212;
+	background: #056F25;
 	font-family: "Courier 10 Pitch", Courier, monospace;
 	font-size: 15px;
 	font-size: 1.5rem;
@@ -72,7 +72,7 @@ acronym {
 
 mark,
 ins {
-	background: #056F25;
+	background: #8A1124;
 	text-decoration: none;
 }
 
@@ -122,7 +122,7 @@ body {
 .intro {
     padding: 2em 2em;
     color: #ffffff;
-    background: #985d42;
+    background: #118A6E;
 }
 
 
@@ -145,7 +145,7 @@ body {
 #origin-text {
     margin: 1em 0;
     padding: 1em 1em 0;
-    background-color: #ededed;
+    background-color: #89360F;
 }
 
 #origin-text p {
