--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 
 .masthead {
     padding: 1em 2em;
-    background-color: #2e0d1a;
+    background-color: #B11634;
     color: white;
 }
 
@@ -122,7 +122,7 @@ body {
 .intro {
     padding: 2em 2em;
     color: #ffffff;
-    background: #118A6E;
+    background: #0B8039;
 }
 
 
@@ -145,7 +145,7 @@ body {
 #origin-text {
     margin: 1em 0;
     padding: 1em 1em 0;
-    background-color: #89360F;
+    background-color: #B00E33;
 }
 
 #origin-text p {
@@ -184,7 +184,7 @@ body {
 
 #reset:hover {
     color: white;
-    background-color: #E95D0F;
+    background-color: #0D8D45;
 }
 
 .credits {
