--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
 #origin-text {
     margin: 1em 0;
     padding: 1em 1em 0;
-    background-color: #B00E33;
+    background-color: #B11634;
 }
 
 #origin-text p {
@@ -177,14 +177,14 @@ body {
     padding: .5em 1em;
     font-size: 1.2em;
     font-weight: bold;
-    color: #E95D0F;
+    color: #0B8039;
     background: white ;
-    border: 10px solid #E95D0F;
+    border: 10px solid #0B8039;
 }
 
 #reset:hover {
     color: white;
-    background-color: #0D8D45;
+    background-color: #B11634;
 }
 
 .credits {
